* Kazakh (China) (kk-cn)
* Kazakh Cyrillic (kk-cyrl) (new)
* Kazakh (Kazakhstan) (kk-kz)
* Kazakh Latin (kk-latn) (new)
* Kazakh (Turkey) (kk-tr)
* Kalaallisut (kl) (new)
* Kannada (kn)
* Korean (ko)
* Kölsch (ksh)
* Kurdish (Arabic) (ku-arab)
* Kurdish (Latin) (ku-latn)
* Cornish (kw) (new)
* Kirghiz (ky) (new)
* Latin (la)
* Ladino (lad) (new)
* Luxembourgish (lb) (new)
* Lak (lbe) (new)
* Limbugian (li)
* Líguru (lij) (new)
* Lozi (loz) (new)
* Lingala (ln)
* Lithuanian (lt)
* Moksha (mdf) (new)
* Malagasy (mg) (new)
* Malayalam (ml)
* Macedonian (mk)
* Marathi (mr)
* Malay (ms)
* Erzya (myv) (new)
* Nauru (na) (new)
* Nahuatl (nah)
* Min-nan (nan)
* Napolitan (nap)
* Low Saxon (nds)
* Dutch Low Saxon (nds-nl)
* Newari (new) (new)
* Dutch (nl)
* Norwegian (nynorsk) (nn)
* Norwegian (bokmål)‬ (no)
* Novial (nov) (new)
* Northern Sotho (nso) (new)
* Occitan (oc)
* Pangasinan (pag) (new)
* Papiamento (pap) (new)
* Deitsch (pdc) (new)
* Polish (pl)
* Piemontèis (pms)
* Pontic (pnt) (new)
* Pashto (ps)
* Portugese (pt)
* Quechua (qu)
* Rhaeto-Romance (rm) (new)
* Romanian (ro)
* Russian (ru)
* Sakha (sah)
* Sardinian (sc)
* Sicilian (scn)
* Scots (sco) (new)
* Sindhi (sd)
* Sassarese (sdc) (new)
* Seri (sei) (new)
* Tachelhit (shi)
* Slovak (sk)
* Southern Sami (sma) (new)
* Serbian (Cyrillic) (sr-ec)
* Swati (ss) (new)
* Saterland Frisian (stq) (new)
* Sundanese (su)
* Swedish (sv)
* Swahili (sw) (new)
* Tamil (ta)
* Teluga (te)
* Tetun (tet) (new)
* Tajik (tg)
* Thai (th)
* Tagalog (tl) (new)
* Tonga (to) (new)
* Turkish (tr)
* Tuvinian (tyv)
* Uyghur (ug)
* Uzbek (uz)
* Venitian (vec)
* Vietnamese (vi)
* West Flemish (vls)
* Volapük (vo)
* Walloon (wa)
* Wolof (wo)
* Wu (wuu) (new)
* Yiddish (yi)
* Cantonese (yue)
* Zhuang (za)
* Zealandic (zea)
* Chinese (zh)
* Old Chinese/Late Time Chinese (zh-classical)
* Chinese (Simplified) (zh-hans)
* Chinese (Traditional) (zh-hant)
* Chinese (Taiwan) (zh-tw)

== Compatibility ==
