@@ -1,0 +1,404 @@
+<?php
+/** Lingua Franca Nova (Lingua Franca Nova)
+ *
+ * @addtogroup Language
+ *
+ * @author Cgboeree
+ */
+
+$messages = array(
+# User preference toggles
+'tog-underline'               => 'Sulinia lias:',
+'tog-highlightbroken'         => 'Forma lias rompeda <a href="" class="new">como esta</a> (alterna: como esta <a href="" class="internal">?</a>).',
+'tog-justify'                 => 'Ajusta paragrafes',
+'tog-hideminor'               => 'Asconda editas minor en cambias resente',
+'tog-extendwatchlist'         => 'Grandi la lista oservada per mostra tota cambias aplicable',
+'tog-usenewrc'                => 'Aumenta cambias resente (JavaScript)',
+'tog-numberheadings'          => 'Dona automatica numeros a titula',
+'tog-showtoolbar'             => 'Mostra la bara de utiles per edita (JavaScript)',
+'tog-editondblclick'          => 'Edita pajes a du clicas (JavaScript)',
+'tog-editsection'             => 'Engrana la edita de sesion via lias de {edita}.',
+'tog-editsectiononrightclick' => 'Engrana la edita de sesion par clica a la destra a titulos de sesion (JavaScript)',
+'tog-showtoc'                 => 'Mostra la table de contenis (per pajes con plu ce tre titulos)',
+'tog-rememberpassword'        => 'Memora me sinia per entra a esta computador',
+'tog-editwidth'               => 'La caxa de editas ave la longia masima',
+'tog-watchcreations'          => 'Junta la pajes ce me ia creada a me lista de pajes oservada',
+'tog-watchdefault'            => 'Junta pajes ce me ia edita a me lista de pajes oservada',
+'tog-watchmoves'              => 'Junta pajes ce me ia moveda a me lista de pajes oservada',
+'tog-watchdeletion'           => 'Junta pajes ce me ia sutrae a me lista de pajes oservada',
+'tog-minordefault'            => 'Marca costumal tota editas como minor',
+'tog-previewontop'            => 'Mostra la previde ante la caxa de editas',
+'tog-previewonfirst'          => 'Mostra la previde a la edita prima',
+'tog-nocache'                 => 'Desengana la reserva de pajes',
+'tog-enotifwatchlistpages'    => 'Envia un eposta a me cuando un paje ce me oserva es cambiada',
+'tog-enotifusertalkpages'     => 'Envia me un eposta cuando me paje de discutes es cambiada',
+'tog-enotifminoredits'        => 'Ance envia un eposta a me con edita minor de pajes',
+'tog-enotifrevealaddr'        => 'Descovre la dirije de me eposta en postas de nota',
+'tog-shownumberswatching'     => 'Mostra la numero de usores oservante',
+'tog-fancysig'                => 'Sinias simple (sin lia automatica)',
+'tog-externaleditor'          => 'Usa costumal editadores esterna',
+'tog-watchlisthideown'        => 'Asconde me editas de la lista de pajes oservada',
+'tog-watchlisthidebots'       => 'Asconde editas par bot de la lista de pajes oservada',
+'tog-watchlisthideminor'      => 'Asconde editas minor de la lista de pajes oservada',
+'tog-ccmeonemails'            => 'Envia copias de la epostas ce me envia a otras a me ance',
+
+'underline-always'  => 'A tota tempo',
+'underline-never'   => 'A no tempo',
+'underline-default' => 'Surfador costumal',
+
+'skinpreview' => '(Previde)',
+
+# Dates
+'sunday'        => 'soldi',
+'monday'        => 'lundi',
+'tuesday'       => 'martedi',
+'wednesday'     => 'mercurdi',
+'thursday'      => 'jovedi',
+'friday'        => 'venerdi',
+'saturday'      => 'saturdi',
+'sun'           => 'Sol',
+'mon'           => 'Lun',
+'tue'           => 'Mar',
+'wed'           => 'Mer',
+'thu'           => 'Jov',
+'fri'           => 'Ven',
+'sat'           => 'Sat',
+'january'       => 'janero',
+'february'      => 'febrero',
+'march'         => 'marto',
+'april'         => 'april',
+'may_long'      => 'maio',
+'june'          => 'junio',
+'july'          => 'julio',
+'august'        => 'agosto',
+'september'     => 'setembre',
+'october'       => 'otobre',
+'november'      => 'novembre',
+'december'      => 'desembre',
+'january-gen'   => 'Janero',
+'february-gen'  => 'Febrero',
+'march-gen'     => 'Marto',
+'april-gen'     => 'April',
+'may-gen'       => 'Maio',
+'june-gen'      => 'Junio',
+'july-gen'      => 'Julio',
+'august-gen'    => 'Agosto',
+'september-gen' => 'Setembre',
+'october-gen'   => 'Otobre',
+'november-gen'  => 'Novembre',
+'december-gen'  => 'Desembre',
+'jan'           => 'jan',
+'feb'           => 'feb',
+'mar'           => 'mar',
+'apr'           => 'apr',
+'may'           => 'mai',
+'jun'           => 'jun',
+'jul'           => 'jul',
+'aug'           => 'ago',
+'sep'           => 'set',
+'oct'           => 'oto',
+'nov'           => 'nov',
+'dec'           => 'des',
+
+# Bits of text used by many pages
+'categories'            => 'Categorias',
+'pagecategories'        => '{{PLURAL:$1|Categoria|Categorias}}',
+'category_header'       => 'Articles en categoria "$1"',
+'subcategories'         => 'Sucategorias',
+'category-media-header' => 'Medio en catagoria "$1"',
+'category-empty'        => "''Aora, esta categoria no conteni pajes o medio.''",
+
+'mainpagetext'      => "<big>'''MediaWiki es aora instalada.'''</big>",
+'mainpagedocfooter' => 'Atenda la [http://meta.wikimedia.org/wiki/Help:Contents Gida per Usores] per avisa supra la usa de la programa de vici.
+
+== Comensa ==
+
+* [http://www.mediawiki.org/wiki/Manual:Configuration_settings Lista de ajustas de la desinia]
+* [http://www.mediawiki.org/wiki/Manual:FAQ Demandas comun de MediaWiki]
+* [http://lists.wikimedia.org/mailman/listinfo/mediawiki-announce Lista per receta anunsias de novas supra MediaWiki]',
+
+'about'          => 'Supra',
+'article'        => 'Paje de contenis',
+'newwindow'      => '(va abri en fenetra nova)',
+'cancel'         => 'Cansela',
+'qbfind'         => 'Trova',
+'qbbrowse'       => 'Surfa',
+'qbedit'         => 'Edita',
+'qbpageoptions'  => 'Esta paje',
+'qbpageinfo'     => 'Situa',
+'qbmyoptions'    => 'Me pajes',
+'qbspecialpages' => 'Pajes spesial',
+'moredotdotdot'  => 'Plu...',
+'mypage'         => 'Me paje',
+'mytalk'         => 'Me discutes',
+'anontalk'       => 'Discutes per esta IP',
+'navigation'     => 'Naviga',
+
+# Metadata in edit box
+'metadata_help' => 'Metadata:',
+
+'errorpagetitle'    => 'Era',
+'returnto'          => 'Restora a $1.',
+'tagline'           => 'De {{SITENAME}}',
+'help'              => 'Disionario',
+'search'            => 'Xerca',
+'searchbutton'      => 'Xerca',
+'go'                => 'Vade',
+'searcharticle'     => 'Va',
+'history'           => 'Istoria de paje',
+'history_short'     => 'Istoria',
+'updatedmarker'     => 'renovida de me visita presedente',
+'info_short'        => 'Informa',
+'printableversion'  => 'Varia primable',
+'permalink'         => 'Lia permanente',
+'print'             => 'Primi',
+'edit'              => 'Cambia',
+'editthispage'      => 'Cambia esta paje',
+'delete'            => 'Sutrae',
+'deletethispage'    => 'Sutrae esta paje',
+'undelete_short'    => 'Desutrae {{PLURAL:$1|edita|editas}}',
+'protect'           => 'Proteje',
+'protect_change'    => 'cambia la proteje',
+'protectthispage'   => 'Proteje esta paje',
+'unprotect'         => 'desproteje',
+'unprotectthispage' => 'Desproteje esta paje',
+'newpage'           => 'Paje nova',
+'talkpage'          => 'Discute esta paje',
+'talkpagelinktext'  => 'Parla',
+'specialpage'       => 'Paje spesial',
+'personaltools'     => 'Utiles personal',
+'postcomment'       => 'Junta un comenta',
+'articlepage'       => 'Vide la paje de contenis',
+'talk'              => 'Discutes',
+'views'             => 'Vides',
+'toolbox'           => 'Utiles',
+'userpage'          => 'Vide paje de usor',
+'projectpage'       => 'Vide la paje de projeta',
+'imagepage'         => 'Vide paje de imaje',
+'mediawikipage'     => 'Vide la paje de mesaje',
+'templatepage'      => 'Vide la paje de model',
+'viewhelppage'      => 'vide la paje de aida',
+'categorypage'      => 'Vide la paje de categoria',
+'viewtalkpage'      => 'Vide la discute',
+'otherlanguages'    => 'En otra linguas',
+'redirectedfrom'    => '(Redirijeda de $1)',
+'redirectpagesub'   => 'Redireta la paje',
+'protectedpage'     => 'Paje protejeda',
+'jumpto'            => 'Salta a:',
+'jumptonavigation'  => 'naviga',
+'jumptosearch'      => 'xerca',
+
+# All link text and link target definitions of links into project namespace that get used by other message strings, with the exception of user group pages (see grouppage) and the disambiguation template definition (see disambiguations).
+'aboutsite' => 'Supra {{SITENAME}}',
+'aboutpage' => 'Project:Supra',
+'mainpage'  => 'Paje Prima',
+
+'ok'          => 'Oce',
+'editsection' => 'cambia',
+'toc'         => 'Contenida',
+'showtoc'     => 'mostra',
+'hidetoc'     => 'asconde',
+
+# Short words for each namespace, by default used in the namespace tab in monobook
+'nstab-category' => 'Categoria',
+
+# General errors
+'badtitle' => 'Titulo es mal',
+
+# Login and logout pages
+'logouttitle'      => 'Sinia per retira',
+'login'            => 'Sinia per entra',
+'loginprompt'      => 'Tu debe engrana "tortetas" per entra {{SITENAME}}.',
+'userlogin'        => 'Sinia per entra',
+'logout'           => 'Sinia per retira',
+'userlogout'       => 'Sinia per retira',
+'createaccount'    => 'Crea un conta',
+'emailconfirmlink' => 'Aproba tu dirije de eposta',
+
+# Edit pages
+'summary'          => 'Soma',
+'minoredit'        => 'Esta es un cambia minor',
+'watchthis'        => 'Oserva esta paje',
+'savearticle'      => 'Fisa paje',
+'preview'          => 'Previde',
+'showpreview'      => 'Mostra previde',
+'showdiff'         => 'Mostra diferes',
+'blockedtitle'     => 'Usor es impedida',
+'newarticle'       => '(Nova)',
+'yourdiff'         => 'Diferes',
+'copyrightwarning' => 'Per favore nota ce tota labora a {{SITENAME}} es judida ce el es relasada su la $2 (vide $1 per detalias). Si tu no desira ce tu scrives ta es editada sin compati e redistribui sin tu permite, no sumita el asi!<br />
+Tu ance promete a nos ce tu ia scriveda esta par tu mesma, o copiada esta de un domina publica o otra orijin libre.
+<strong>NO SUMITA LABORA SU DIRETOS DE AUTOR SIN PERMITE!!</strong>',
+
+# History pages
+'previousrevision' => '← Altera presedente',
+'cur'              => 'aora',
+'next'             => 'seguente',
+'last'             => 'dife',
+'orig'             => 'orij',
+'histfirst'        => 'Prima',
+'histlast'         => 'Ultima',
+
+# Search results
+'searchresults' => 'Resultas de xerca',
+'prevn'         => '$1 presedente',
+'nextn'         => '$1 seguente',
+
+# Preferences page
+'saveprefs'         => 'Fisa',
+'searchresultshead' => 'Xerca',
+'savedprefs'        => 'Tu preferis es fisada',
+
+# User rights
+'saveusergroups' => 'Fisa la grupo de usores',
+
+# Recent changes
+'nchanges'          => '$1 {{PLURAL:$1|cambia|cambias}}',
+'recentchanges'     => 'Cambias resente',
+'recentchangestext' => 'Asi la lista de cambias resente en la vici.',
+'diff'              => 'dife',
+'hist'              => 'isto',
+'hide'              => 'Asconde',
+'show'              => 'mostra',
+
+# Recent changes linked
+'recentchangeslinked' => 'Cambias relateda',
+
+# Upload
+'upload'   => 'Envia fixes',
+'savefile' => 'Fisa fix',
+
+# Image list
+'imagelist'    => 'Lista de imajes',
+'ilsubmit'     => 'Xerca',
+'imgdelete'    => 'sutr',
+'linkstoimage' => 'Esta pajes lia a esta fix:',
+
+# Random page
+'randompage' => 'Paje acaso',
+
+# Statistics
+'statistics' => 'Statisticas',
+
+'disambiguations' => 'Pajes desambiguinte',
+
+'doubleredirects' => 'Redirijes duple',
+
+# Miscellaneous special pages
+'lonelypages'             => 'Pajes orfanida',
+'uncategorizedpages'      => 'Pajes sin categoria',
+'uncategorizedcategories' => 'Categorias sin categoria',
+'unusedcategories'        => 'Categorias nonusada',
+'unusedimages'            => 'Images nonusada',
+'popularpages'            => 'Pajes poplal',
+'wantedpages'             => 'Pajes desirada',
+'mostlinked'              => 'Pajes la plu liada',
+'allpages'                => 'Tota pajes',
+'shortpages'              => 'Pajes corta',
+'longpages'               => 'Pajes longa',
+'deadendpages'            => 'Pajes sin sorti',
+'listusers'               => 'Lista de usores',
+'specialpages'            => 'Pajes spesial',
+'spheading'               => 'Pajes spesial per tota usores',
+'restrictedpheading'      => 'Pajes spesial restrinjeda',
+'newpages'                => 'Pajes nova',
+'ancientpages'            => 'Pajes la plu vea',
+'movethispage'            => 'Move esta paje',
+'unusedimagestext'        => '<p>Nota ce otra locas de rede pote lia a un imaje con un URL direta, e donce el pote continua es listada asi contra ce el es usada ativa.</p>',
+'unusedcategoriestext'    => 'La categorias seguente esiste sin es usada par otra articles o categorias.',
+
+# Book sources
+'booksources' => 'Orijines de libros',
+
+'categoriespagetext' => 'Es la categorias seguente en la vici.',
+'userrights'         => 'Dirije de la diretos de usores',
+
+# Special:Log
+'log' => 'Lista de atas',
+
+# Special:Allpages
+'nextpage'       => 'Paje seguente ($1)',
+'allpagesprev'   => 'Presedente',
+'allpagesnext'   => 'Seguente',
+'allpagessubmit' => 'Vade',
+
+# Watchlist
+'watchlist'         => 'Pajes oservada',
+'nowatchlist'       => 'Tu ave no cosas en tu lista oservada',
+'watchthispage'     => 'Oserva esta paje',
+'unwatch'           => 'Nonoserva',
+'watchlistcontains' => 'Tu lista oservada teni $1 {{PLURAL:$1|paje|pajes}}.',
+
+'enotif_newpagetext' => 'Esta es un paje nova',
+'created'            => 'Creada',
+
+# Delete/protect/revert
+'deletepage'         => 'Sutrae la paje',
+'confirm'            => 'Aproba',
+'confirmdelete'      => 'Aproba la sutrae',
+'actioncomplete'     => 'Ata completada',
+'protectedarticle'   => '"[[$1]]" protejeda',
+'unprotectedarticle' => "''[[$1]]'' desprotejeda",
+'protectsub'         => '(Fisa nivel de proteje a "$1")',
+'confirmprotect'     => 'Aproba la proteje',
+'protectcomment'     => 'Razona per proteje',
+'unprotectsub'       => "(Desprotejente ''$1'')",
+
+# Undelete
+'undelete' => 'Restora paje sutraeda',
+
+# Contributions
+'contributions' => 'Contribuis de usor',
+'mycontris'     => 'Me contribuis',
+
+# What links here
+'whatlinkshere' => 'Ce es liada a asi',
+'linkshere'     => "Esta pajes lia a '''[[:$1]]''':",
+
+# Block/unblock
+'blockip'           => 'Impedi usor',
+'ipbreason'         => 'Razona:',
+'ipbsubmit'         => 'Impedi esta usor',
+'blockipsuccesssub' => 'La impedi susede',
+'ipusubmit'         => 'Desimpedi esta dirije',
+'ipblocklist'       => 'Liste de usores impedida',
+'blocklink'         => 'impedi',
+
+# Move page
+'movepage'        => 'Move paje',
+'movearticle'     => 'Move paje:',
+'movepagebtn'     => 'Move paje',
+'movedto'         => 'moveda a',
+'1movedto2'       => '[[$1]] es moveda a [[$2]]',
+'1movedto2_redir' => '[[$1]] es moveda a [[$2]] tra redirije',
+'movelogpagetext' => 'A su es un lista de pajes moveda',
+'movereason'      => 'Razona',
+
+# Export
+'export' => 'Esporta pajes',
+
+# Namespace 8 related
+'allmessages' => 'Notas de sistem',
+
+# Special:Import
+'import' => 'Emporta pajes',
+
+# Tooltip help for the actions
+'tooltip-save' => 'Fisa tu cambias',
+
+# Attribution
+'and'    => 'e',
+'others' => 'otras',
+
+# Spam protection
+'subcategorycount'     => 'Es $1 {{PLURAL:$1|sucategoria|sucategorias}} en esta categoria.',
+'categoryarticlecount' => 'Es $1 {{PLURAL:$1|article|articles}} en esta categoria.',
+
+# Browsing diffs
+'previousdiff' => '← Difere presedente',
+'nextdiff'     => 'Difere seguente →',
+
+# Special:Newimages
+'newimages' => 'Imajes nova',
+
+);
