@@ -557,6 +557,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * Latin (la)
 * Ladino (lad) (new)
 * Luxembourgish (lb) (new)
+* Lingua Franca Nova (new)
 * Lak (lbe) (new)
 * Limbugian (li)
 * Líguru (lij) (new)
@@ -629,6 +630,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * Walloon (wa)
 * Wolof (wo)
 * Wu (wuu) (new)
+* Xhosa (xh) (new)
 * Yiddish (yi)
 * Cantonese (yue)
 * Zhuang (za)
